# Aether

./: CMakeLists.txt  Makefile
apps/aether-c/: CMakeLists.txt  main.c
apps/ether-c/: CMakeLists.txt  main.c
cmake/: build-dependencies.cmake  include-dependencies.cmake  link-dependencies.cmake
examples/: example.ae
libs/allocators/: CMakeLists.txt  fmalloc.h  linear-allocator.c  linear-allocator.h
libs/compiler/: CMakeLists.txt  error.h
libs/compiler/lexing/: lexer.c  lexer.h  token-stream.c  token-stream.h
libs/compiler/semantic-analysis/: analyser.c  analyser.h
libs/compiler/symbols/: symbol.c  symbol.h
libs/compiler/syntax-parsing/: ast.c  ast.h  parser.c  parser.h
libs/containers/: CMakeLists.txt  array.h  string.c  string.h
libs/file-system/: CMakeLists.txt  file-system.c  file-system.h  path.h
